@@ -231,6 +231,14 @@
 					<para>Upon receiving the SIGUSR1 signal, mosquitto will write the persistence database to disk. This signal is only acted upon if persistence is enabled.</para>
 				</listitem>
 			</varlistentry>
+			<varlistentry>
+				<term>SIGUSR2</term>
+				<listitem>
+					<para>The SIGUSR2 signal causes mosquitto to run VACUUM on
+					the in-memory database. This frees currently unused memory
+					associated with the database.</para>
+				</listitem>
+			</varlistentry>
 		</variablelist>
 	</refsect1>
 
